
7.69  2018-02-24
  - Improved respond_to method in Mojolicious::Controller and accepts helper in
    Mojolicious::Plugin::DefaultHelpers to no longer limit support for multiple
    MIME types to requests containing an X-Requested-With header, since browsers
    have become smarter about requesting what they actually want.

7.68  2018-02-22
  - Fixed RFC 7230 compliance bugs in Mojo::Message::Request that prevented
    "GET //foo/bar HTTP/1.1" to be interpreted as a request target in origin
    form.

7.67  2018-02-19
  - Modernized ".perltidyrc".
  - Fixed a bug in Mojo::Asset::File where forked processes could delete
    temporary files prematurely.

7.66  2018-02-13
  - This release contains fixes for security issues, everybody should upgrade!
  - Removed origin attribute of Mojo::Cookie::Response.
  - Removed deprecated data and remaining methods from Mojo::IOLoop::Delay.
  - Added host_only attribute to Mojo::Cookie::Response.
  - Improved all method in Mojo::Promise to resolve with no results if no
    promises have been passed.
  - Fixed a bug in Mojo::UserAgent::CookieJar where old cookies could be leaked.
    (exp-innit, sri)

7.65  2018-02-11
  - Added EXPERIMENTAL timing->begin, timing->elapsed, timing->rps and
    timing->server_timing helpers to Mojolicious::Plugin::DefaultHelpers.
  - Added EXPERIMENTAL server_timing method to Mojo::Headers.
  - Added support for new HTTP status code.

7.64  2018-02-07
  - Fixed a bug in Mojo::Log where short log messages spanning multiple lines
    would not be formatted properly for systemd.

7.63  2018-02-06
  - Improved Mojo::Log to use native systemd log levels.

7.62  2018-02-01
  - Added -u option to get command. (jberger)
  - Added dont_use_nlink option to list_tree method in Mojo::File.
  - Added reverse proxy section to Mojolicious::Guides::Cookbook. (polettix)
  - Fixed a promise resolution bug in Mojo::Promise.

7.61  2018-01-08
  - Increased default upgrade_timeout from 60 to 180 seconds in